--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -7,3 +7,8 @@ p= question.body
   = f.label :body
   = f.text_area :body
   = f.submit 'Post answer'
+
+table
+  tr
+    th Answers
+    = render question.answers.all
