--- a/app/views/answers/show.html.slim
+++ b/app/views/answers/show.html.slim
@@ -1,4 +1,4 @@
--if author?
+-if current_user&.author?(answer)
   = link_to 'Delete answer', answer_path(answer), method: :delete
 
 h1 = answer.question.title
