--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,4 +1,4 @@
--if author?
+-if current_user&.author?(question)
   = link_to 'Delete question', question_path(question), method: :delete
 
 h1= question.title
