--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -4,7 +4,7 @@
 h1= question.title
 p= question.body
 
-= render 'shared/errors', resource: @answer
+= render 'shared/errors', resource: question
 
 = form_with model: [question, @answer], local: true  do |f|
   = f.label :body
@@ -14,4 +14,4 @@ p= question.body
 table
   tr
     th Answers
-    = render question.answers.all
+    = render question.answers
