--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,2 +1,5 @@
 tr
-  td= answer.body
+  td
+    = answer.body
+    - if current_user&.author?(answer)
+      = link_to 'Delete answer', answer_path(answer), method: :delete
