--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,12 +1,12 @@
--if current_user&.author?(question)
-  = link_to 'Delete question', question_path(question), method: :delete
+-if current_user&.author?(@question)
+  = link_to 'Delete question', question_path(@question), method: :delete
 
-h1= question.title
-p= question.body
+h1= @question.title
+p= @question.body
 
-= render 'shared/errors', resource: question
+= render 'shared/errors', resource: @answer
 
-= form_with model: [question, @answer], local: true  do |f|
+= form_with model: [@question, @answer], local: true  do |f|
   = f.label :body
   = f.text_area :body
   = f.submit 'Post answer'
@@ -14,4 +14,4 @@ p= question.body
 table
   tr
     th Answers
-    = render question.answers
+    = render @question.answers
