--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -10,7 +10,7 @@ p= @question.body
 .answer-errors
   = render 'shared/errors', resource: @answer
 
-= form_with model: [@question, @answer], local: false do |f|
+= form_with model: [@question, @answer], local: false, class: 'new-answer' do |f|
   = f.label :body
   = f.text_area :body
   = f.submit 'Post answer'
