--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -11,6 +11,6 @@ p= @question.body
   = render 'shared/errors', resource: @answer
 
 = form_with model: [@question, @answer], local: false, class: 'new-answer' do |f|
-  = f.label :body
+  = f.label :body, 'Your answer'
   = f.text_area :body
   = f.submit 'Post answer'
