--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,12 +1,17 @@
-p= answer.body
+div class = "answer-#{answer.id}"
 
--if current_user&.author?(answer)
+  p= answer.body
 
-  = link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id}
+  -if current_user&.author?(answer.question)
+    = link_to 'Choose', best_answer_path(answer), remote: true, method: :patch
 
-  = form_with model: answer, local: false, class: 'hidden', html: {id: "edit-answer-#{answer.id}"} do |f|
-    = f.label :body, 'Your answer'
-    = f.text_area :body
-    = f.submit 'Save'
+  -if current_user&.author?(answer)
 
-  = link_to 'Delete answer', answer_path(answer), method: :delete
+    = link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id}
+
+    = form_with model: answer, local: false, class: 'hidden', html: {id: "edit-answer-#{answer.id}"} do |f|
+      = f.label :body, 'Your answer'
+      = f.text_area :body
+      = f.submit 'Save'
+
+    = link_to 'Delete answer', answer_path(answer), remote: true, method: :delete
