--- a/app/views/answers/destroy.js.erb
+++ b/app/views/answers/destroy.js.erb
@@ -1,6 +1,4 @@
-$('.answer-errors').html("<%= render 'shared/errors', resource: @answer %>");
-
-<% if !@answer.errors.present? %>
+<% if !@answer.persisted? %>
   <% if question.best_answer %>
     $('.answers').html('<%= j render partial: 'answers/best_answer', object: question.best_answer %>');
     $('.answers').append('<%= j render partial: 'answers/answer', collection: question.other_answers, as: :answer %>');
