--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -5,12 +5,14 @@ h1= @question.title
 p= @question.body
 
 .answers
-  = render @question.answers
+  -if @question.best_answer
+    = render partial: 'answers/best_answer', object: @question.best_answer
+  = render partial:'answers/answer', collection: @question.other_answers, as: :answer
 
 .answer-errors
-  = render 'shared/errors', resource: @answer
+  = render 'shared/errors', resource: @new_answer
 
-= form_with model: [@question, @answer], local: false, class: 'new-answer' do |f|
+= form_with model: [@question, @new_answer], local: false, class: 'new-answer' do |f|
   = f.label :body, 'Your answer'
   = f.text_area :body
   = f.submit 'Post answer'
