--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -2,6 +2,10 @@ div class = "answer-#{answer.id}"
 
   p= answer.body
 
+  - if answer.files.attached?
+    - answer.files.each do |file|
+      p= link_to file.filename.to_s, url_for(file)
+
   -if current_user&.author?(answer.question)
     = link_to 'Choose', best_answer_path(answer), remote: true, method: :patch
 
@@ -10,8 +14,12 @@ div class = "answer-#{answer.id}"
     = link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id}
 
     = form_with model: answer, local: false, class: 'hidden', html: {id: "edit-answer-#{answer.id}"} do |f|
-      = f.label :body, 'Your answer'
-      = f.text_area :body
-      = f.submit 'Save'
+      p
+        = f.label :body, 'Your answer'
+        = f.text_area :body
+      p
+        = f.label :files
+        = f.file_field :files, multiple: true
+      p= f.submit 'Save'
 
     = link_to 'Delete answer', answer_path(answer), remote: true, method: :delete
