--- a/app/views/answers/_best_answer.html.slim
+++ b/app/views/answers/_best_answer.html.slim
@@ -3,13 +3,21 @@ div class = "answer-#{best_answer.id}"
   b Best answer
   p= best_answer.body
 
+  - if best_answer.files.attached?
+    - best_answer.files.each do |file|
+      p= link_to file.filename.to_s, url_for(file)
+
   -if current_user&.author?(best_answer)
 
     = link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: best_answer.id}
 
     = form_with model: @best_answer, local: false, class: 'hidden', html: {id: "edit-answer-#{best_answer.id}"} do |f|
-      = f.label :body, 'Your answer'
-      = f.text_area :body
-      = f.submit 'Save'
+      p
+        = f.label :body, 'Your answer'
+        = f.text_area :body
+      p
+        = f.label :files
+        = f.file_field :files, multiple: true
+      p= f.submit 'Save'
 
     = link_to 'Delete answer', answer_path(best_answer), remote: true, method: :delete
