refactoring, fix: files is added and not replaced, deleting best answer and related question

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -2,24 +2,11 @@ div class = "answer-#{answer.id}"
 
   p= answer.body
 
-  - if answer.files.attached?
-    - answer.files.each do |file|
-      p= link_to file.filename.to_s, url_for(file)
+  .attachments
+    = render partial: 'attachments/attachments', locals: {resource: answer}
 
   -if current_user&.author?(answer.question)
     = link_to 'Choose', best_answer_path(answer), remote: true, method: :patch
 
   -if current_user&.author?(answer)
-
-    = link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id}
-
-    = form_with model: answer, local: false, class: 'hidden', html: {id: "edit-answer-#{answer.id}"} do |f|
-      p
-        = f.label :body, 'Your answer'
-        = f.text_area :body
-      p
-        = f.label :files
-        = f.file_field :files, multiple: true
-      p= f.submit 'Save'
-
-    = link_to 'Delete answer', answer_path(answer), remote: true, method: :delete
+    = render partial:'answers/form', locals: {answer: answer}
