--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -2,25 +2,4 @@ p
   b= question.title
   p= link_to question.body, question_path(question)
 
-  -if current_user&.author?(question)
-
-    = link_to 'Edit', '#', class: 'edit-question-link', data: { question_id: question.id}
-
-    - if question.files.attached?
-      - question.files.each do |file|
-        p= link_to file.filename.to_s, url_for(file), class: 'hidden', id: "file-question-#{question.id}"
-
-    = form_with model: question, local: false, class: 'hidden', html: {id: "edit-question-#{question.id}"} do |f|
-      p
-        = f.label :title, 'Title'
-        = f.text_field :title
-      p
-        = f.label :body, 'Your question'
-        = f.text_area :body
-      p
-        = f.label :files
-        = f.file_field :files, multiple: true
-
-      p= f.submit 'Save'
-
-    = link_to 'Delete question', question_path(question), method: :delete
+  = render partial: 'form', locals: { question: question }
