--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -4,10 +4,8 @@
 h1= @question.title
 p= @question.body
 
-- if @question.files.attached?
-  - @question.files.each do |file|
-    p= link_to file.filename.to_s, url_for(file)
-
+.attachments
+  = render partial: 'attachments/attachments', locals: { resource: @question }
 
 .answers
   -if @question.best_answer
