--- a/app/views/answers/_best_answer.html.slim
+++ b/app/views/answers/_best_answer.html.slim
@@ -3,8 +3,8 @@ div class = "answer-#{best_answer.id}"
   b Best answer
   p= best_answer.body
 
-  .attachments
-    = render partial:'attachments/attachments', locals: {resource: best_answer}
+  div class = "attachments-#{best_answer.id}"
+    = render partial:'attachments/attachments', locals: {resource: best_answer, hide: false}
 
   -if current_user&.author?(best_answer)
     = render partial: 'answers/form', locals: { answer: best_answer}
