--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -4,8 +4,8 @@
 h1= @question.title
 p= @question.body
 
-.attachments
-  = render partial: 'attachments/attachments', locals: { resource: @question }
+div class = "attachments-#{@question.id}"
+  = render partial: 'attachments/attachments', locals: { resource: @question, hide: false }
 
 .answers
   -if @question.best_answer
