--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -7,6 +7,9 @@ p= @question.body
 div class = "attachments-#{@question.id}"
   = render partial: 'attachments/attachments', locals: { resource: @question, hide: false }
 
+.links
+  = render partial: 'links/links', locals: { resource: @question }
+
 .answers
   -if @question.best_answer
     = render partial: 'answers/best_answer', object: @question.best_answer
@@ -22,4 +25,12 @@ div class = "attachments-#{@question.id}"
   p
     = f.label :files
     = f.file_field :files, multiple: true
+
+  p Links:
+  #links
+    = f.fields_for :links do |link|
+      = render 'links/link_fields', f: link
+    .actions
+      = link_to_add_association 'add link', f, :links, partial: 'links/link_fields'
+
   p= f.submit 'Post answer'
