--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -10,4 +10,12 @@
   p
     = f.label :files
     = f.file_field :files, multiple: true
+
+  p Links:
+  #links
+    = f.fields_for :links do |link|
+      = render 'links/link_fields', f: link
+    .actions
+      = link_to_add_association 'add link', f, :links, partial: 'links/link_fields'
+
   p= f.submit 'Ask'
