--- a/app/views/links/_links.html.slim
+++ b/app/views/links/_links.html.slim
@@ -2,3 +2,5 @@ p Links:
 ul
   - resource.links.each do |link|
     li= link_to link.name, link.url, target: 'blank'
+    - if link.gist?
+      =javascript_include_tag link.url + '.js'
