author can add links while editing his answer/question

--- a/app/views/links/_links.html.slim
+++ b/app/views/links/_links.html.slim
@@ -1,6 +1,6 @@
-p Links:
-ul
+- if resource&.links.length != 0
+  p Links:
   - resource.links.each do |link|
-    li= link_to link.name, link.url, target: 'blank'
+    = link_to link.name, link.url, target: 'blank'
     - if link.gist?
       =javascript_include_tag link.url + '.js'
