--- a/app/views/answers/_best_answer.html.slim
+++ b/app/views/answers/_best_answer.html.slim
@@ -3,11 +3,11 @@ div class = "answer-#{best_answer.id}"
   b Best answer
   p= best_answer.body
 
-  .links
+  div class = "attachments-#{best_answer.id}"
     = render partial: 'links/links', locals: { resource: best_answer }
 
   div class = "attachments-#{best_answer.id}"
-    = render partial:'attachments/attachments', locals: {resource: best_answer, hide: false}
+    = render partial:'attachments/attachments', locals: {resource: best_answer }
 
   -if current_user&.author?(best_answer)
     = render partial: 'answers/form', locals: { answer: best_answer}
