--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -2,8 +2,11 @@
 
   = link_to 'Edit', '#', class: 'edit-question-link', data: { question_id: question.id}
 
-  div class = "attachments-#{question.id}"
-    = render partial: 'attachments/attachments', locals: { resource: question, hide: true }
+  div class = "attachments-#{question.id} hidden"
+    = render partial: 'attachments/attachments', locals: { resource: question }
+
+  div class = "links-#{question.id} hidden"
+    = render partial: 'links/links', locals: { resource: question }
 
   = form_with model: question, local: false, class: 'hidden', html: {id: "edit-question-#{question.id}"} do |f|
     p
@@ -15,6 +18,12 @@
     p
       = f.label :files
       = f.file_field :files, multiple: true
+    p
+    #links
+      = f.fields_for :links do |link|
+
+      .actions
+        = link_to_add_association 'add link', f, :links, partial: 'links/link_fields'
 
     p= f.submit 'Save'
 
