--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -5,10 +5,10 @@ h1= @question.title
 p= @question.body
 
 div class = "attachments-#{@question.id}"
-  = render partial: 'attachments/attachments', locals: { resource: @question, hide: false }
+  = render partial: 'attachments/attachments', locals: { resource: @question }
 
-.links
-  = render partial: 'links/links', locals: { resource: @question }
+div class = "links-#{@question.id}"
+  = render partial: 'links/links', locals: { resource: @question}
 
 .answers
   -if @question.best_answer
@@ -26,10 +26,9 @@ div class = "attachments-#{@question.id}"
     = f.label :files
     = f.file_field :files, multiple: true
 
-  p Links:
+  p
   #links
     = f.fields_for :links do |link|
-      = render 'links/link_fields', f: link
     .actions
       = link_to_add_association 'add link', f, :links, partial: 'links/link_fields'
 
