--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -18,4 +18,13 @@
     .actions
       = link_to_add_association 'add link', f, :links, partial: 'links/link_fields'
 
+  p
+    = f.fields_for :award do |a|
+      p
+        = a.label :title, 'Award title'
+        = a.text_field :title
+      p
+        = a.label :image
+        = a.file_field :image
+
   p= f.submit 'Ask'
