--- a/app/views/links/_links.html.slim
+++ b/app/views/links/_links.html.slim
@@ -2,8 +2,8 @@
   p Links:
   - resource.links.each do |link|
     p
-      = link_to link.name, link.url, target: 'blank'
+      = link_to link.name, link.url
+      - if link.gist?
+        = javascript_include_tag link.url + '.js'
       - if current_user&.author?(resource)
         = link_to 'Delete link', link_path(link), remote: true, method: :delete, id: "delete-link-#{link.id}"
-      - if link.gist?
-        =javascript_include_tag link.url + '.js'
