Action Cable for questions

--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -3,4 +3,4 @@ div class = "question-#{question.id}"
   b= question.title
   p= link_to question.body, question_path(question)
 
-  = render partial: 'form', locals: { question: question }
+  = render partial: 'questions/form', locals: { question: question }
