--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,4 +1,4 @@
-p= link_to 'Ask question', new_question_path
+p= link_to 'Ask question', new_question_path, class: 'new_question_link'
 
 .question-errors
   = render 'shared/errors', resource: question
