--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,7 +1,11 @@
-p= link_to 'Ask question', new_question_path, class: 'new_question_link'
+div
+  h1 Questions
+  = link_to new_question_path, class: 'new_question_link' do
+    = octicon "plus-circle", height: 30, class: "text-error"
 
-.question-errors
-  = render 'shared/errors', resource: question
-
-.questions
-  = render @questions
+- if @questions.any?
+  .questions
+    = render @questions
+- else
+  div
+    .center No questions found(
