--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,11 +1,12 @@
 div
   h1 Questions
-  = link_to new_question_path, class: 'new_question_link' do
+  = link_to new_question_path, id: 'new_question_link' do
     = octicon "plus-circle", height: 30, class: "text-error"
 
 - if @questions.any?
+  .question-errors
+    = render 'shared/errors', resource: question
   .questions
     = render @questions
 - else
-  div
-    .center No questions found(
+  .center No questions found(
