--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -11,4 +11,4 @@ nav class="navbar sticky-top navbar-light" style="background-color: #0dcaf0"
 
 
     -else
-      = link_to 'Log in ', new_user_session_path
+      = link_to 'Log_in ', new_user_session_path
