--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -6,7 +6,9 @@ p= @question.body
 
 = render 'shared/vote', resource: @question
 
-= render 'shared/subscriptions', question: @question
+.subscription
+  -if can? :create, Subscription
+    = render 'subscriptions/subscription', question: @question
 
 div class = "attachments-#{@question.id}"
   = render partial: 'attachments/attachments', locals: { resource: @question }
