--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,13 +1,14 @@
-div
-  h1 Questions
-  -if can? :create, Question
-    = link_to new_question_path, id: 'new_question_link' do
-      = octicon "plus-circle", height: 30, class: "text-error"
+p
+  h1.text-success
+    ' Questions
+    -if can? :create, Question
+      =' link_to new_question_path, id: 'new_question_link' do
+        = octicon "plus-circle", height: 30
 
-- if @questions.any?
-  .question-errors
-    = render 'shared/errors', resource: question
-  .questions
-    = render @questions
-- else
-  .center No questions found(
+.questions
+  - if @questions.any?
+    .question-errors
+      = render 'shared/errors', resource: question
+      = render @questions
+  - else
+    .center No questions found(
