--- a/app/views/shared/_vote.html.slim
+++ b/app/views/shared/_vote.html.slim
@@ -1,41 +1,47 @@
-div class = "rating-#{resource.class.to_s.downcase}-#{resource.id}"
-  p Rating:
-  = resource.rating
-
 .vote
-  div class = "vote-#{resource.class.to_s.downcase}-#{resource.id}"
+  div class = "vote-#{resource.class.to_s.downcase}-#{resource.id} text-center"
     -if can? :vote_up, resource
       - if current_user.voted?(resource)
-        = link_to 'Cancel', polymorphic_path(resource, action: :vote_cancel),
-                            remote: true,
-                            method: :patch,
-                            class: "vote link-cancel-#{resource.id}",
-                            data:{ type: :json }
+
         = link_to 'Up', polymorphic_path(resource, action: :vote_up),
                         remote: true,
                         method: :patch,
                         class: "vote link-vote-#{resource.id} d-none",
                         data:{ type: :json }
-
-        = link_to 'Down', polymorphic_path(resource, action: :vote_down),
-                          remote: true,
-                          method: :patch,
-                          class: "vote link-vote-#{resource.id} d-none",
-                          data:{ type: :json }
       - else
-        = link_to 'Cancel', polymorphic_path(resource, action: :vote_cancel),
-                            remote: true,
-                            method: :patch,
-                            class: "vote link-cancel-#{resource.id} d-none",
-                            data:{ type: :json }
         = link_to 'Up', polymorphic_path(resource, action: :vote_up),
                         remote: true,
                         method: :patch,
                         class: "vote link-vote-#{resource.id}",
                         data:{ type: :json }
 
+    div class = "rating-#{resource.class.to_s.downcase}-#{resource.id}"
+      h1.text-center
+        span.badge.bg-secondary.text-white
+          =' resource.rating
+
+    -if can? :vote_up, resource
+      - if current_user.voted?(resource)
+        = link_to 'Down', polymorphic_path(resource, action: :vote_down),
+                          remote: true,
+                          method: :patch,
+                          class: "vote link-vote-#{resource.id} d-none",
+                          data:{ type: :json }
+
+        = link_to 'Cancel', polymorphic_path(resource, action: :vote_cancel),
+                            remote: true,
+                            method: :patch,
+                            class: "vote link-cancel-#{resource.id}",
+                            data:{ type: :json }
+      - else
         = link_to 'Down', polymorphic_path(resource, action: :vote_down),
                           remote: true,
                           method: :patch,
                           class: "vote link-vote-#{resource.id}",
                           data:{ type: :json }
+
+        = link_to 'Cancel', polymorphic_path(resource, action: :vote_cancel),
+                            remote: true,
+                            method: :patch,
+                            class: "vote link-cancel-#{resource.id} d-none",
+                            data:{ type: :json }
