--- a/app/views/comments/_comments.html.slim
+++ b/app/views/comments/_comments.html.slim
@@ -1,6 +1,14 @@
-- if resource&.comments.any?
-  h4 Comments
-  - resource.comments.each do |comment|
-    p= comment.body
+div class = "comments-#{resource.id} text-right"
+  - if resource&.comments.any?
+
+      hr
+      - resource.comments.each do |comment|
+        blockquote.blockquote.mb-0
+          small
+            = comment.body
+        footer.blockquote-footer
+          ='' comment.user.email
+          ='' comment.created_at.to_date
+        hr
 
 = render partial: 'comments/form', locals: { commentable: resource }
