--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,9 +13,6 @@ html
 
   body
     = render 'shared/nav'
-    p class="notice"
-      = notice
-    p class="alert"
-      = alert
+    = render 'shared/flash'
     div class="container"
       = yield
