--- a/app/views/links/_links.html.slim
+++ b/app/views/links/_links.html.slim
@@ -1,9 +1,10 @@
 - if resource&.links.any?
-  p Links:
+  | Attached links:
   - resource.links.each do |link|
     p
-      = link_to link.name, link.url
+      =' link_to link.name, link.url
       - if link.gist?
         = javascript_include_tag link.url + '.js'
       - if can? :destroy, link
-        = link_to 'Delete link', link_path(link), remote: true, method: :delete, id: "delete-link-#{link.id}"
+        small
+          =' link_to 'Delete link', link_path(link), remote: true, method: :delete, id: "delete-link-#{link.id}"
