--- a/app/views/subscriptions_mailer/send_notification.txt.slim
+++ b/app/views/subscriptions_mailer/send_notification.txt.slim
@@ -1,5 +1,7 @@
 new Answer to subscribed Question:
 __________________________________
 
-  = answer.question.title
-  = answer.body
+Question:
+= answer.question.title
+Answer:
+= answer.body
