--- a/app/views/subscriptions_mailer/send_notification.html.slim
+++ b/app/views/subscriptions_mailer/send_notification.html.slim
@@ -1,3 +1,5 @@
 h1 new Answer to subscribed Question:
-  h3 answer.question.title
-    = link_to answer.body.truncate(10), question_path(answer.question)
+h3
+  = @answer.question.title
+p = @answer.body
+= link_to 'click for more info >>>', question_url(@answer.question)
