--- a/app/views/awards/_awards.html.slim
+++ b/app/views/awards/_awards.html.slim
@@ -4,4 +4,4 @@
     = image_tag question.award.image, size: "50x50"
     - if can? :destroy, question.award
       small
-        =' link_to 'delete award', award_path(question.award), remote: true, method: :delete, id: "delete-award-#{question.award.id}"
+        = link_to 'delete award', award_path(question.award), remote: true, method: :delete, id: "delete-award-#{question.award.id}"
