--- a/app/views/links/_links.html.slim
+++ b/app/views/links/_links.html.slim
@@ -2,9 +2,9 @@
   | Attached links:
   - resource.links.each do |link|
     p
-      =' link_to link.name, link.url
+      = link_to link.name, link.url
       - if link.gist?
         = javascript_include_tag link.url + '.js'
       - if can? :destroy, link
         small
-          =' link_to 'Delete link', link_path(link), remote: true, method: :delete, id: "delete-link-#{link.id}"
+          = link_to 'Delete link', link_path(link), remote: true, method: :delete, id: "delete-link-#{link.id}"
