--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -20,10 +20,10 @@ div class = "question-#{question.id}"
             = question.answers.size
         div
           -if can? :edit, question
-            ='link_to 'Edit', '#', class: 'edit-question-link', data: { question_id: question.id}
-            ='link_to 'Delete', question_path(question), method: :delete
+            =link_to 'Edit', '#', class: 'edit-question-link', data: { question_id: question.id}
+            =link_to 'Delete', question_path(question), method: :delete
 
     .card-footer
       small.text-muted
-        =' question.created_at.to_date
-        =' question.user.email
+        = question.created_at.to_date
+        = question.user.email
