--- a/app/views/shared/_vote.html.slim
+++ b/app/views/shared/_vote.html.slim
@@ -18,7 +18,7 @@
     div class = "rating-#{resource.class.to_s.downcase}-#{resource.id}"
       h1.text-center
         span.badge.bg-secondary.text-white
-          =' resource.rating
+          = resource.rating
 
     -if can? :vote_up, resource
       - if current_user.voted?(resource)
