--- a/app/views/questions/_question_full.html.slim
+++ b/app/views/questions/_question_full.html.slim
@@ -2,8 +2,8 @@
       .card-header.text-right
           small.text-muted
             ' asked:
-            =' question.created_at.to_date
-            =' question.user.email
+            => question.created_at.to_date
+            => question.user.email
       .row.g-0
         .col-md-2
           = render 'shared/vote', resource: question
@@ -11,10 +11,10 @@
         .col-md-10
           .card-body
             h5.card-title
-              b.text-info =' question.title
+              b.text-info => question.title
 
             .card-text
-              = question.body
+              => question.body
             .card-text.text-right
               = render partial: 'questions/form', locals: { question: question }
             .card-text.text-right
@@ -29,7 +29,7 @@
       .card-footer.text-left
           small.text-muted
             - if can? :edit, question
-              = link_to 'Edit', '#', class: 'edit-question-link', data: { question_id: question.id}
-              = link_to 'Delete', question_path(question), method: :delete
+              => link_to 'Edit', '#', class: 'edit-question-link', data: { question_id: question.id}
+              => link_to 'Delete', question_path(question), method: :delete
             -if can? :create, Subscription
               = render 'subscriptions/subscription', question: question
