--- a/app/views/subscriptions_mailer/send_notification.html.slim
+++ b/app/views/subscriptions_mailer/send_notification.html.slim
@@ -1,5 +1,5 @@
 h1 new Answer to subscribed Question:
 h3
-  = @answer.question.title
-p = @answer.body
-= link_to 'click for more info >>>', question_url(@answer.question)
+  => @answer.question.title
+p => @answer.body
+=> link_to 'click for more info >>>', question_url(@answer.question)
