--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -11,6 +11,6 @@
   #links
     = f.fields_for :links do |link|
     .actions
-      = link_to_add_association 'add link', f, :links, partial: 'links/link_fields'
+      => link_to_add_association 'add link', f, :links, partial: 'links/link_fields'
 
   p= f.submit 'Save'
