--- a/app/views/attachments/_attachments.html.slim
+++ b/app/views/attachments/_attachments.html.slim
@@ -2,7 +2,7 @@
   | Attached files:
   - resource.files.each do |file|
     p
-      = link_to file.filename.to_s, url_for(file)
+      => link_to file.filename.to_s, url_for(file)
       - if can? :destroy, resource
         small
-          = link_to 'Delete file', attachment_path(file), remote: true, method: :delete, id: "delete-file-#{file.id}"
+          => link_to 'Delete file', attachment_path(file), remote: true, method: :delete, id: "delete-file-#{file.id}"
