--- a/app/views/comments/_comments.html.slim
+++ b/app/views/comments/_comments.html.slim
@@ -5,10 +5,10 @@ div class = "comments-#{resource.id} text-right"
       - resource.comments.each do |comment|
         blockquote.blockquote.mb-0
           small
-            = comment.body
+            => comment.body
         footer.blockquote-footer
-          = comment.user.email
-          = comment.created_at.to_date
+          => comment.user.email
+          => comment.created_at.to_date
         hr
 
 = render partial: 'comments/form', locals: { commentable: resource }
