--- a/app/views/daily_digest_mailer/digest.html.slim
+++ b/app/views/daily_digest_mailer/digest.html.slim
@@ -1,4 +1,4 @@
 h1 Look at new Questions:
 
   - @questions.each do |question|
-    = link_to question.title, question_path(question)
+    => link_to question.title, question_path(question)
