--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -2,7 +2,7 @@ p
   h1.text-success
     ' Questions
     -if can? :create, Question
-      =' link_to new_question_path, id: 'new_question_link' do
+      => link_to new_question_path, id: 'new_question_link' do
         = octicon "plus-circle", height: 30
 
 .questions
