--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -21,7 +21,7 @@ h2.text-info
     = f.fields_for :links do |link|
       = render 'links/link_fields', f: link
     .actions
-      = link_to_add_association 'add link', f, :links, partial: 'links/link_fields'
+      => link_to_add_association 'add link', f, :links, partial: 'links/link_fields'
   p
     h5.text-info
       | Add award for best answer:
