--- a/app/views/shared/_vote.html.slim
+++ b/app/views/shared/_vote.html.slim
@@ -3,13 +3,13 @@
     -if can? :vote_up, resource
       - if current_user.voted?(resource)
 
-        = link_to 'Up', polymorphic_path(resource, action: :vote_up),
+        => link_to 'Up', polymorphic_path(resource, action: :vote_up),
                         remote: true,
                         method: :patch,
                         class: "vote link-vote-#{resource.id} d-none",
                         data:{ type: :json }
       - else
-        = link_to 'Up', polymorphic_path(resource, action: :vote_up),
+        => link_to 'Up', polymorphic_path(resource, action: :vote_up),
                         remote: true,
                         method: :patch,
                         class: "vote link-vote-#{resource.id}",
@@ -22,25 +22,25 @@
 
     -if can? :vote_up, resource
       - if current_user.voted?(resource)
-        = link_to 'Down', polymorphic_path(resource, action: :vote_down),
+        => link_to 'Down', polymorphic_path(resource, action: :vote_down),
                           remote: true,
                           method: :patch,
                           class: "vote link-vote-#{resource.id} d-none",
                           data:{ type: :json }
 
-        = link_to 'Cancel', polymorphic_path(resource, action: :vote_cancel),
+        => link_to 'Cancel', polymorphic_path(resource, action: :vote_cancel),
                             remote: true,
                             method: :patch,
                             class: "vote link-cancel-#{resource.id}",
                             data:{ type: :json }
       - else
-        = link_to 'Down', polymorphic_path(resource, action: :vote_down),
+        =>link_to 'Down', polymorphic_path(resource, action: :vote_down),
                           remote: true,
                           method: :patch,
                           class: "vote link-vote-#{resource.id}",
                           data:{ type: :json }
 
-        = link_to 'Cancel', polymorphic_path(resource, action: :vote_cancel),
+        => link_to 'Cancel', polymorphic_path(resource, action: :vote_cancel),
                             remote: true,
                             method: :patch,
                             class: "vote link-cancel-#{resource.id} d-none",
