--- a/app/views/subscriptions/_subscription.html.slim
+++ b/app/views/subscriptions/_subscription.html.slim
@@ -1,5 +1,5 @@
 .subscription
   - if current_user&.subscribed?(question)
-    = link_to 'Unsubscribe', subscription_path(@subscription), method: :delete, remote: true
+    => link_to 'Unsubscribe', subscription_path(@subscription), method: :delete, remote: true
   - else
-    = link_to 'Subscribe', question_subscriptions_path(question), method: :post, remote: true
+    => link_to 'Subscribe', question_subscriptions_path(question), method: :post, remote: true
