--- a/app/views/comments/_comments.html.slim
+++ b/app/views/comments/_comments.html.slim
@@ -3,12 +3,13 @@ div class = "comments-#{resource.id} text-right"
 
       hr
       - resource.comments.each do |comment|
-        blockquote.blockquote.mb-0
-          small
-            => comment.body
-        footer.blockquote-footer
-          => comment.user.email
-          => comment.created_at.to_date
-        hr
+        - cache comment do
+          blockquote.blockquote.mb-0
+            small
+              => comment.body
+          footer.blockquote-footer
+            => comment.user.email
+            => comment.created_at.to_date
+          hr
 
 = render partial: 'comments/form', locals: { commentable: resource }
