--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,14 +1,15 @@
-p
-  h1.text-success
-    ' Questions
-    -if can? :create, Question
-      => link_to new_question_path, id: 'new_question_link' do
-        = octicon "plus-circle", height: 30
+-cache collection_cache_key_for(:question)
+  p
+    h1.text-success
+      ' Questions
+      -if can? :create, Question
+        => link_to new_question_path, id: 'new_question_link' do
+          = octicon "plus-circle", height: 30
 
-.questions
-  - if @questions.any?
-    .question-errors
-      = render 'shared/errors', resource: question
-      = render @questions
-  - else
-    .center No questions found(
+  .questions
+    - if @questions.any?
+      .question-errors
+        = render 'shared/errors', resource: question
+        = render @questions
+    - else
+      .center No questions found(
