--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,11 +1,12 @@
-p
-  .question
-    = render partial: 'questions/question_full', question: @question
+- cache @question do
+  p
+    .question
+      = render partial: 'questions/question_full', question: @question
 
-.answers
-  -if @question.best_answer
-    = render partial: 'answers/best_answer', object: @question.best_answer
-  = render partial:'answers/answer', collection: @question.other_answers, as: :answer
+  .answers
+    -if @question.best_answer
+      = render partial: 'answers/best_answer', object: @question.best_answer
+    = render partial:'answers/answer', collection: @question.other_answers, as: :answer
 
 .answer-errors
   = render 'shared/errors', resource: @new_answer
